Описание термина 'comment'

--- a/data/terms/texts/Escape_sequences.html
+++ b/data/terms/texts/Escape_sequences.html
@@ -22,7 +22,7 @@
 <p>
     In some programming languages, in <b>Python</b> for instance, you can code string
     <b>Unicode literals</b> with help of escape sequences. To do this you need to 
-    put "\" symbol and the <b>hexadecimal code</b> of symbol. For example: "\xF578".
+    put "\\" symbol and the <b>hexadecimal code</b> of symbol. For example: "\xF578".
 </p>
 
 <h3>See also</h3>
